--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,10 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    
-    <h1> Odin Recipes</h1>
+    <h1>Lasagna</h1>
 
-    <a href="./recipes/lasagna.html">Lasagna</a>
-
+    <img src="../images/lasagna.jpg" alt= "lasagna" height = 400 width = 350>
 </body>
 </html>
