added basic CSS

--- a/recipes/cake.html
+++ b/recipes/cake.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <h1>Lasagna</h1>
 
     <img src="../images/cake.jpg" alt= "cake" height = 400 width = 350>
 
-    <p>Cake is a beloved dessert enjoyed by people of all ages and cultures, celebrated for its versatility and the joy it brings to various occasions. Traditionally made from a mixture of flour, sugar, eggs, and butter, cakes can be flavored and decorated in countless ways to suit any taste. From the simple elegance of a vanilla sponge cake to the rich indulgence of a chocolate fudge cake, the possibilities are endless. Cakes are often the centerpiece of celebrations such as birthdays, weddings, and anniversaries, symbolizing joy and togetherness. The process of baking a cake, with its precise measurements and careful techniques, also highlights the intersection of science and art in the culinary world.</p>
+    <p class = "body">Cake is a beloved dessert enjoyed by people of all ages and cultures, celebrated for its versatility and the joy it brings to various occasions. Traditionally made from a mixture of flour, sugar, eggs, and butter, cakes can be flavored and decorated in countless ways to suit any taste. From the simple elegance of a vanilla sponge cake to the rich indulgence of a chocolate fudge cake, the possibilities are endless. Cakes are often the centerpiece of celebrations such as birthdays, weddings, and anniversaries, symbolizing joy and togetherness. The process of baking a cake, with its precise measurements and careful techniques, also highlights the intersection of science and art in the culinary world.</p>
 
-    <p>Beyond their role in celebrations, cakes have evolved to reflect contemporary trends and dietary preferences. Today, one can find cakes that cater to various dietary needs, including gluten-free, vegan, and low-sugar options, ensuring that everyone can enjoy a slice of this delightful treat. The artistry of cake decoration has also reached new heights, with intricate designs, fondant sculptures, and elaborate frosting techniques turning cakes into stunning visual masterpieces. Whether enjoyed as a simple homemade treat or a professionally crafted work of art, cakes continue to bring happiness and a sense of indulgence to those who partake in their sweet and satisfying flavors.</p>
+    <p class = "body">Beyond their role in celebrations, cakes have evolved to reflect contemporary trends and dietary preferences. Today, one can find cakes that cater to various dietary needs, including gluten-free, vegan, and low-sugar options, ensuring that everyone can enjoy a slice of this delightful treat. The artistry of cake decoration has also reached new heights, with intricate designs, fondant sculptures, and elaborate frosting techniques turning cakes into stunning visual masterpieces. Whether enjoyed as a simple homemade treat or a professionally crafted work of art, cakes continue to bring happiness and a sense of indulgence to those who partake in their sweet and satisfying flavors.</p>
 
 
     <h2>Ingredients</h2>
