--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     
     <h1> Odin Recipes</h1>
 
-    <ul>
+    <ul class = "home-list">
         <li><a href="./recipes/lasagna.html">Lasagna</a></li>
         <li><a href="./recipes/sushi.html">sushi</a></li>
         <li><a href="./recipes/cake.html">cake</a></li>
