--- a/recipes/sushi.html
+++ b/recipes/sushi.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <h1>Sushi</h1>
 
     <img src="../images/sushi.jpeg" alt= "sushi" height = 400 width = 350>
 
-    <p>
+    <p class = "body">
         Sushi is a traditional Japanese dish that has gained immense popularity worldwide for its unique combination of flavors and artistic presentation. At its core, sushi consists of vinegared rice accompanied by various ingredients such as raw or cooked seafood, vegetables, and occasionally tropical fruits. The harmonious balance between the seasoned rice and the fresh ingredients creates a delightful culinary experience. Sushi comes in various forms, including nigiri (hand-pressed rice topped with a slice of fish), maki (rolled sushi wrapped in seaweed), and sashimi (slices of raw fish served without rice). Each type showcases the chef's skill in handling and preparing high-quality ingredients, often elevating the dish to an art form.</p>
-    <p>Beyond its delicious taste, sushi is celebrated for its health benefits, as it typically includes nutrient-rich ingredients like fish, seaweed, and vegetables. Fish, a common component of sushi, is a valuable source of omega-3 fatty acids, which are essential for heart health and cognitive function. Seaweed, used in many sushi rolls, provides a wealth of vitamins and minerals, while vegetables add fiber and essential nutrients. Sushi's emphasis on fresh, high-quality ingredients and its minimalist approach to seasoning allows the natural flavors to shine through, offering a refreshing and wholesome dining experience. Whether enjoyed at a high-end sushi bar or as a quick takeout meal, sushi continues to captivate food enthusiasts around the globe with its exquisite taste and cultural significance.</p>
+    <p class = "body">Beyond its delicious taste, sushi is celebrated for its health benefits, as it typically includes nutrient-rich ingredients like fish, seaweed, and vegetables. Fish, a common component of sushi, is a valuable source of omega-3 fatty acids, which are essential for heart health and cognitive function. Seaweed, used in many sushi rolls, provides a wealth of vitamins and minerals, while vegetables add fiber and essential nutrients. Sushi's emphasis on fresh, high-quality ingredients and its minimalist approach to seasoning allows the natural flavors to shine through, offering a refreshing and wholesome dining experience. Whether enjoyed at a high-end sushi bar or as a quick takeout meal, sushi continues to captivate food enthusiasts around the globe with its exquisite taste and cultural significance.</p>
 
     <h2>Ingredients</h2>
     <ul>
