Added colors and more styling

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,30 +7,33 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <h1>Lasagna</h1>
 
-    <img src="../images/lasagna.jpg" alt= "lasagna" height = 400 width = 350>
+    <div class = "card">
 
-    <p class = "body">Lasagna is a beloved Italian dish that has captured the hearts and palates of people worldwide. It is a rich, layered casserole traditionally made with sheets of pasta, a hearty meat sauce, creamy béchamel or ricotta cheese, and a generous topping of melted mozzarella. The origins of lasagna trace back to ancient Rome, where a similar dish called "lasanum," meaning "container" or "pot" in Latin, was made. Over time, lasagna evolved in Italy, particularly in the region of Emilia-Romagna, where the classic recipe featuring ragu (meat sauce), bechamel, and Parmigiano-Reggiano cheese was perfected. This comforting dish is often baked to perfection, resulting in a savory, cheesy, and utterly satisfying meal that is enjoyed by families and at gatherings.</p>
+        <h1 class = "title">Lasagna</h1>
 
-    <p class = "body">Modern variations of lasagna are plentiful, reflecting the versatility of this iconic dish. Vegetarian versions might include layers of spinach, zucchini, or mushrooms in place of the meat sauce, catering to diverse dietary preferences. Some chefs get creative with ingredients, incorporating seafood, exotic spices, or even different types of cheeses to give a unique twist to the classic recipe. Lasagna can also be adapted to be gluten-free by using alternative pasta or zucchini slices. This adaptability ensures that lasagna remains a staple in kitchens around the world, celebrated not just for its traditional flavors but also for its capacity to evolve and inspire new culinary creations.</p>
+        <img src="../images/lasagna.jpg" alt= "lasagna" height = 400 width = 350>
 
-    <h2>Ingredients</h2>
-    <ul>
-        <li>Cheese</li>
-        <li>Pasta</li>
-        <li>Tomato sauce</li>
-        <li>Love</li>
-    </ul>
+        <p class = "body">Lasagna is a beloved Italian dish that has captured the hearts and palates of people worldwide. It is a rich, layered casserole traditionally made with sheets of pasta, a hearty meat sauce, creamy béchamel or ricotta cheese, and a generous topping of melted mozzarella. The origins of lasagna trace back to ancient Rome, where a similar dish called "lasanum," meaning "container" or "pot" in Latin, was made. Over time, lasagna evolved in Italy, particularly in the region of Emilia-Romagna, where the classic recipe featuring ragu (meat sauce), bechamel, and Parmigiano-Reggiano cheese was perfected. This comforting dish is often baked to perfection, resulting in a savory, cheesy, and utterly satisfying meal that is enjoyed by families and at gatherings.</p>
 
-    <h2>Steps</h2>
-    <ol>
-        <li>Prepare the Meat Sauce</li>
-        <li>Cook the Lasagna Noodles</li>
-        <li>Assemble the Lasagna</li>
-        <li>Bake and Serve</li>
+        <p class = "body">Modern variations of lasagna are plentiful, reflecting the versatility of this iconic dish. Vegetarian versions might include layers of spinach, zucchini, or mushrooms in place of the meat sauce, catering to diverse dietary preferences. Some chefs get creative with ingredients, incorporating seafood, exotic spices, or even different types of cheeses to give a unique twist to the classic recipe. Lasagna can also be adapted to be gluten-free by using alternative pasta or zucchini slices. This adaptability ensures that lasagna remains a staple in kitchens around the world, celebrated not just for its traditional flavors but also for its capacity to evolve and inspire new culinary creations.</p>
 
-    </ol>
+        <h2 class = "title">Ingredients</h2>
+        <ul>
+            <li>Cheese</li>
+            <li>Pasta</li>
+            <li>Tomato sauce</li>
+            <li>Love</li>
+        </ul>
 
+        <h2 class = "title">Steps</h2>
+        <ol>
+            <li>Prepare the Meat Sauce</li>
+            <li>Cook the Lasagna Noodles</li>
+            <li>Assemble the Lasagna</li>
+            <li>Bake and Serve</li>
+
+        </ol>
+    </div>
 </body>
 </html>
