--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class = "card">
+     <h1 class = "title"> Odin Recipes</h1>
+
+        <ul class = "home-list">
+         <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+         <li><a href="./recipes/sushi.html">sushi</a></li>
+         <li><a href="./recipes/cake.html">cake</a></li>
+
+        </ul>
+
     
-    <h1> Odin Recipes</h1>
-
-    <ul class = "home-list">
-        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
-        <li><a href="./recipes/sushi.html">sushi</a></li>
-        <li><a href="./recipes/cake.html">cake</a></li>
-
-    </ul>
-
-    <p></p>
-
+    </div>
 </body>
 </html>
